--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Bigre contributors
 description: Computational biology seminars in Grenoble
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/logo.png
+avatar: /images/logo_round.png
 
 #
 # Flags below are optional
